[gd_scene load_steps=11 format=3 uid="uid://cjn6ecipve4xm"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_6uaap"]
[ext_resource type="PackedScene" uid="uid://d4axhjf88x8dl" path="res://scenes/cards/card_pack.tscn" id="1_vslgj"]
[ext_resource type="Texture2D" uid="uid://cbpft3ltfg41v" path="res://images/star.png" id="3_it4wx"]
[ext_resource type="Texture2D" uid="uid://d1i0s0jl1xjf5" path="res://images/hourglass.png" id="3_qlpow"]
[ext_resource type="Texture2D" uid="uid://ccovrgman033m" path="res://images/coin.png" id="3_v40vp"]

[sub_resource type="LabelSettings" id="LabelSettings_58vxo"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_dluk8"]
font_size = 48

[sub_resource type="LabelSettings" id="LabelSettings_t38bl"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_74x0t"]
font_size = 24

[sub_resource type="LabelSettings" id="LabelSettings_gmovr_new"]
font_size = 128
font_color = Color(1, 0, 0, 1)
outline_size = 8
outline_color = Color(0, 0, 0, 1)

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_6uaap")
cardpack_scene = ExtResource("1_vslgj")

[node name="TopBar" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 63.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
layout_mode = 2

[node name="RepContainer" type="HBoxContainer" parent="TopBar/HBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="Star" type="TextureRect" parent="TopBar/HBoxContainer/RepContainer"]
layout_mode = 2
texture = ExtResource("3_it4wx")
expand_mode = 2
stretch_mode = 5

[node name="RepLabel" type="Label" parent="TopBar/HBoxContainer/RepContainer"]
layout_mode = 2
text = "-1"
label_settings = SubResource("LabelSettings_58vxo")

[node name="TimerContainer" type="HBoxContainer" parent="TopBar/HBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="Hourglass" type="TextureRect" parent="TopBar/HBoxContainer/TimerContainer"]
layout_mode = 2
texture = ExtResource("3_qlpow")
expand_mode = 2
stretch_mode = 5

[node name="TimerLabel" type="Label" parent="TopBar/HBoxContainer/TimerContainer"]
layout_mode = 2
text = "00:00"
label_settings = SubResource("LabelSettings_58vxo")

[node name="MoneyContainer" type="HBoxContainer" parent="TopBar/HBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="Coin" type="TextureRect" parent="TopBar/HBoxContainer/MoneyContainer"]
layout_mode = 2
texture = ExtResource("3_v40vp")
expand_mode = 2
stretch_mode = 5

[node name="MoneyLabel" type="Label" parent="TopBar/HBoxContainer/MoneyContainer"]
layout_mode = 2
text = "1,000"
label_settings = SubResource("LabelSettings_dluk8")

[node name="ForDebugging" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_top = 0.781
anchor_right = 1.0
anchor_bottom = 0.855
offset_top = -199.52
offset_bottom = -199.6
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30

[node name="Button" type="Button" parent="ForDebugging"]
layout_mode = 2
size_flags_horizontal = 3
text = "Material"

[node name="Button2" type="Button" parent="ForDebugging"]
layout_mode = 2
size_flags_horizontal = 3
text = "Donut"

[node name="Button3" type="Button" parent="ForDebugging"]
layout_mode = 2
size_flags_horizontal = 3
text = "Customer"

[node name="CraftButtonContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_left = 0.345
anchor_top = 0.782
anchor_right = 1.0
anchor_bottom = 0.847
offset_left = 0.399963
offset_top = 0.559814
offset_bottom = 0.759888
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_right = 50

[node name="CraftButton" type="Button" parent="CraftButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "제작"

[node name="CraftListContainer" type="ScrollContainer" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.346
anchor_top = 0.6
anchor_right = 0.954
anchor_bottom = 0.773
offset_left = 0.319977
offset_right = -0.320068
offset_bottom = 0.839844
grow_horizontal = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CraftListContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = -1
anchor_top = 0.86
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -10.2001
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="CardPackContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="FooterContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/FooterContainer"]
layout_mode = 2
text = "카드  팩:"
label_settings = SubResource("LabelSettings_t38bl")

[node name="Description" type="Label" parent="MarginContainer/VBoxContainer/FooterContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "description"
label_settings = SubResource("LabelSettings_74x0t")

[node name="PurchaseButton" type="Button" parent="MarginContainer/VBoxContainer/FooterContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 48
text = "구매"

[node name="GameOverScreen" type="ColorRect" parent="."]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="CenterContainer" type="CenterContainer" parent="GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverScreen/CenterContainer"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="GameOverScreen/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_gmovr_new")
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverScreen/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Restart"

[connection signal="pressed" from="ForDebugging/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ForDebugging/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ForDebugging/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="CraftButtonContainer/CraftButton" to="." method="_on_craft_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/FooterContainer/PurchaseButton" to="." method="_on_purchase_button_pressed"]
[connection signal="pressed" from="GameOverScreen/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
